# agentracer-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
agentracer/: __init__.py  anthropic.py  gemini.py  openai.py
tests/: test_anthropic.py  test_core.py  test_gemini.py  test_openai.py
